Change variables name

--- a/vignettes/Create_1KG_GDS_File.Rmd
+++ b/vignettes/Create_1KG_GDS_File.Rmd
@@ -333,7 +333,7 @@ fileGDS <- file.path(PATHGDS, fileNameGDS)
 generateGDS1KG(pathGeno=file.path("data", "sampleGeno"),
                     filePedRDS=filePED1KG,
                     fileSNPSel=fileFREQ.v,
-                    fileListSNP=fileSNPsRDS,
+                    fileSNVIndex=fileSNPsRDS,
                     fileNameGDS=fileGDS)
 ```
 
