--- a/vignettes/RAIDS.Rmd
+++ b/vignettes/RAIDS.Rmd
@@ -557,9 +557,10 @@ as shown in this example.
 
 ```{r estimateAllelicFraction, echo=TRUE, eval=TRUE, collapse=TRUE, warning=FALSE, message=FALSE}
 #####################################################################
-## Load the required package
+## Load the required packages
 #####################################################################
 library(RAIDS)
+library(gdsfmt)
 
 #####################################################################
 ## The 1KG GDS file is required
@@ -632,12 +633,12 @@ Two inference parameters to be optimized:
 - _K_: the number of neighbors used to call the ancestry
 - _D_: the number of PCA components retained
 
-The accuracy is evaluated using a synthetic dataset created from merging one 
+The accuracy is evaluated using a synthetic data set created from merging one 
 cancer profile with multiple 1KG samples of known ancestry. Using the synthetic 
 profiles, a range of _K_ and _D_ values are tested. Through that process, the 
 _K_ and _D_ values are tuned to maximize accuracy.
 
-This step is consists of two sub-steps:
+This step consists of two sub-steps:
 
 1. Generate the synthetic dataset
 2. Compute the PCA-KNN ancestry call for each synthetic profile
@@ -648,19 +649,19 @@ This step is consists of two sub-steps:
 
 A synthetic profile is generated through the merging of one cancer profile 
 with one 1KG sample of known ancestry. Multiple 1KG samples of different 
-ancestry are required to create a synthetic dataset that will be able to 
+ancestry are required to create a synthetic data set that will be able to 
 show the specific accuracy for each super-population. All the synthetic 
 profiles are saved in the **Profile GDS file** corresponding to the 
-cancer profile used to generate the dataset.
+cancer profile used to generate the synthetic data set.
 
-In summary, a fixed number of samples fo each super-population is extracted 
+In summary, a fixed number of profiles for each super-population is extracted 
 from the 1KG study. The information is saved in the **Profile GDS file** 
 associated to the selected cancer profile. A synthetic profile is created for 
-each combination of the 1KG samples and cancer profile. The synthetic profile 
-is then saved in the **Sample GDS file**.
+each combination of one 1KG sample and cancer profile. All synthetic profiles 
+are then saved in the **Profile GDS file**.
 
 The three functions _select1KGPop()_, _prepSynthetic()_ and _syntheticGeno()_ 
-are used for data synthesis.
+are used for the synthetic data synthesis.
 
 These 3 files are required:
 
@@ -671,19 +672,20 @@ These 3 files are required:
 
 ```{r generateSynthetic, echo=TRUE, eval=TRUE, collapse=TRUE, warning=FALSE, message=FALSE}
 ####################################################################
-## Load required package
+## Load required packages
 ####################################################################
 library(RAIDS)    
+library(gdsfmt)
 
 ####################################################################
-## Randomly extract a fixed number of samples for each
+## Randomly extract a fixed number of profiles for each
 ## subcontinental population present in the 1KG GDS file.
-## When not enough samples are available, all samples are selected.  
+## When not enough profiles are available, all profiles are selected.  
 ####################################################################   
 gds <- snpgdsOpen(file1KG)
 
 ####################################################################
-## Fix RNG seed to ensure reproducible results
+## Fix seed to ensure reproducible results
 ####################################################################
 set.seed(3043)   
 
@@ -695,7 +697,7 @@ set.seed(3043)
 ## The 1KG GDS file in this example only has 6 profiles for each 
 ## subcontinental-level (for demo purpose only)
 ####################################################################
-dataRef <- select1KGPop(gds, nbSamples=2L)
+dataRef <- select1KGPop(gds, nbProfiles=2L)
 
 ## Extract the list of selected 1KG sample identifiers
 listSampleRef <- dataRef$sample.id
@@ -710,13 +712,13 @@ studyDF.syn <- data.frame(study.id="MYDATA.Synthetic",
                           study.platform="PLATFORM",
                           stringsAsFactors=FALSE)
 
-## The Sample GDS file is needed
+## The Profile GDS file is needed
 fileProfile <- file.path(pathProfileGDS, paste0(profileName, ".gds"))
 
 ####################################################################
 ## The prepSynthetic() function prepares the annotation for
 ## the synthetic data
-## The information is saved into the Sample GDS file
+## The information is saved into the Profile GDS file
 ####################################################################
 prepSynthetic(fileProfileGDS=fileProfile,
                 listSampleRef=listSampleRef,
@@ -759,9 +761,10 @@ closefn.gds(gdsRefAnnot)
 
 ```{r PCA.KNN.Synthetic, collapse=TRUE, echo=TRUE, eval=TRUE, warning=FALSE, message=FALSE}
 ####################################################################
-## Load required package
+## Load required packages
 ####################################################################
 library(RAIDS)    
+library(gdsfmt)   
     
 ####################################################################
 ## The 1KG GDS file is required
@@ -793,7 +796,7 @@ set.seed(3043)
     
 ## Select the 1KG samples used to generate the synthetic dataset
 ## Already done in step 6, no need to repeat if the results have been saved
-dataRef <- select1KGPop(gds, nbSamples=2L)
+dataRef <- select1KGPop(gds, nbProfiles=2L)
 
 ####################################################################
 ## The function splitSelectByPop() generates a matrix with the
@@ -804,7 +807,7 @@ sampleRM <- splitSelectByPop(dataRef)
 ## Loop for all cancer samples with associated synthetic data
 for(i in seq_len(length(listSamples))) {
 
-    ## The Sample GDS file associated to the cancer sample     
+    ## The Profile GDS file associated to the cancer profile     
     fileProfile <- file.path(pathProfileGDS,
                                     paste0(listSamples[i], ".gds"))
 
@@ -816,7 +819,7 @@ for(i in seq_len(length(listSamples))) {
             dir.create(PATH_OUT_SAMPLE)
     }
     
-    ## Open the Sample GDS file      
+    ## Open the Profile GDS file      
     gdsProfile <- snpgdsOpen(fileProfile)
 
     ## This variable will contain the results from the PCA analyses
@@ -879,10 +882,11 @@ all the synthetic data are prepared in the step 3.
 
 ```{r PCA.KNN.Sample, warning=FALSE, message=FALSE, collapse=TRUE, echo=TRUE, eval=TRUE}
 ####################################################################
-## Load required package
+## Load required packages
 ####################################################################
 library(RAIDS)    
-    
+library(gdsfmt)   
+
 ####################################################################
 ## The 1KG GDS file is required
 ####################################################################
@@ -995,6 +999,12 @@ also required. The *data.frame* must contain those 3 columns:
 
 
 ```{r runExomeAncestry, echo=TRUE, eval=TRUE, collapse=TRUE, warning=FALSE, message=FALSE}
+####################################################################
+## Load required packages
+####################################################################
+library(RAIDS)    
+library(gdsfmt)
+
 ## Path to the demo 1KG GDS file is located in this package
 dataDir <- system.file("extdata", package="RAIDS")
 
@@ -1055,7 +1065,7 @@ set.seed(3043)
 ## subcontinental-level (for demo purpose only)
 ####################################################################
 gds1KG <- snpgdsOpen(fileGDS)
-dataRef <- select1KGPop(gds1KG, nbSamples=2L)
+dataRef <- select1KGPop(gds1KG, nbProfiles=2L)
 closefn.gds(gds1KG)
 
 ## Chromosome length information
